finished making all the scenes

--- a/Parking App/bin/.gitignore
+++ b/Parking App/bin/.gitignore
@@ -1,3 +1,8 @@
 /application/
 /UtsaLogo.jpg
 /header_parking-1.jpg
+/BackArrow.png
+/GuestLogo.png
+/StaffLogo.jpg
+/StudentLogo.png
+/HomeButtonlogo.png
