--- a/Parking App/.project
+++ b/Parking App/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Parking App</name>
+	<name>Group4Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
